.antlr/cubixParser.java
// Generated from d:\Studia\Semestr6\Kompilatory\cubix-lang\cubix.g4 by ANTLR 4.8
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class cubixParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.8", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, MOVEVALUE=3, COLOR=4, CUBE=5, MOVE=6, ALGO=7, NUM=8, SETTING=9, 
		ARRAY=10, FUNC=11, Type=12, LeftRoundBracket=13, RightRoundBracket=14, 
		LeftSquareBracket=15, RightSquareBracket=16, LeftCurlyBracket=17, RightCurlyBracket=18, 
		COMMA=19, SEMICOLON=20, DOT=21, DOLLAR=22, PLUS=23, ASSIGN=24, COLON=25, 
		LOOP=26, TIMES=27, EXEC=28, CUBECONSTRUCTOR=29, SHOW=30, MIXED=31, SOLVED=32, 
		IN=33, USING=34, BEGIN=35, END=36, Whitespace=37, Newline=38, BlockComment=39, 
		LineComment=40, VariableName=41, NONDIGIT=42, NUMBER=43, SettingValue=44, 
		AlgorithmValue=45, CubeValue=46, ArrayValue=47, Wall=48;
	public static final int
		RULE_start = 0, RULE_statement = 1, RULE_algorithmExecution = 2, RULE_show = 3, 
		RULE_loop = 4, RULE_iterationForI = 5, RULE_iterationForEach = 6, RULE_functionExecution = 7, 
		RULE_expression = 8, RULE_cubeInitialization = 9, RULE_algorithmInitalization = 10, 
		RULE_numberInitalization = 11, RULE_settingInitalization = 12, RULE_moveInitalization = 13, 
		RULE_arrayInitalization = 14, RULE_functionDeclaration = 15;
	private static String[] makeRuleNames() {
		return new String[] {
			"start", "statement", "algorithmExecution", "show", "loop", "iterationForI", 
			"iterationForEach", "functionExecution", "expression", "cubeInitialization", 
			"algorithmInitalization", "numberInitalization", "settingInitalization", 
			"moveInitalization", "arrayInitalization", "functionDeclaration"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'<'", "'>'", null, null, "'Cube'", "'Move'", "'Algo'", "'Num'", 
			"'Setting'", "'Array'", "'FUNC'", null, null, null, null, null, null, 
			null, null, null, "'.'", "'$'", "'+'", "'='", "':'", "'loop'", "'times'", 
			"'exec'", "'cube'", "'show'", "'\"mixed\"'", "'\"solved\"'", "'in'", 
			"'using'", "'begin'", "'end'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, "MOVEVALUE", "COLOR", "CUBE", "MOVE", "ALGO", "NUM", 
			"SETTING", "ARRAY", "FUNC", "Type", "LeftRoundBracket", "RightRoundBracket", 
			"LeftSquareBracket", "RightSquareBracket", "LeftCurlyBracket", "RightCurlyBracket", 
			"COMMA", "SEMICOLON", "DOT", "DOLLAR", "PLUS", "ASSIGN", "COLON", "LOOP", 
			"TIMES", "EXEC", "CUBECONSTRUCTOR", "SHOW", "MIXED", "SOLVED", "IN", 
			"USING", "BEGIN", "END", "Whitespace", "Newline", "BlockComment", "LineComment", 
			"VariableName", "NONDIGIT", "NUMBER", "SettingValue", "AlgorithmValue", 
			"CubeValue", "ArrayValue", "Wall"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "cubix.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public cubixParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class StartContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(cubixParser.EOF, 0); }
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public List<FunctionDeclarationContext> functionDeclaration() {
			return getRuleContexts(FunctionDeclarationContext.class);
		}
		public FunctionDeclarationContext functionDeclaration(int i) {
			return getRuleContext(FunctionDeclarationContext.class,i);
		}
		public List<ShowContext> show() {
			return getRuleContexts(ShowContext.class);
		}
		public ShowContext show(int i) {
			return getRuleContext(ShowContext.class,i);
		}
		public List<TerminalNode> SEMICOLON() { return getTokens(cubixParser.SEMICOLON); }
		public TerminalNode SEMICOLON(int i) {
			return getToken(cubixParser.SEMICOLON, i);
		}
		public StartContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_start; }
	}

	public final StartContext start() throws RecognitionException {
		StartContext _localctx = new StartContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_start);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(35); 
			_errHandler.sync(this);
			_alt = 1;
			do {
				switch (_alt) {
				case 1:
					{
					setState(35);
					_errHandler.sync(this);
					switch (_input.LA(1)) {
					case CUBE:
					case MOVE:
					case ALGO:
					case NUM:
					case SETTING:
					case ARRAY:
						{
						setState(32);
						expression();
						}
						break;
					case LOOP:
					case SHOW:
					case VariableName:
						{
						setState(33);
						statement();
						}
						break;
					case FUNC:
						{
						setState(34);
						functionDeclaration();
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(37); 
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
			} while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
			setState(44);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==SHOW) {
				{
				{
				setState(39);
				show();
				setState(40);
				match(SEMICOLON);
				}
				}
				setState(46);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(47);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatementContext extends ParserRuleContext {
		public TerminalNode SEMICOLON() { return getToken(cubixParser.SEMICOLON, 0); }
		public AlgorithmExecutionContext algorithmExecution() {
			return getRuleContext(AlgorithmExecutionContext.class,0);
		}
		public IterationForIContext iterationForI() {
			return getRuleContext(IterationForIContext.class,0);
		}
		public IterationForEachContext iterationForEach() {
			return getRuleContext(IterationForEachContext.class,0);
		}
		public ShowContext show() {
			return getRuleContext(ShowContext.class,0);
		}
		public FunctionExecutionContext functionExecution() {
			return getRuleContext(FunctionExecutionContext.class,0);
		}
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_statement);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(54);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				{
				setState(49);
				algorithmExecution();
				}
				break;
			case 2:
				{
				setState(50);
				iterationForI();
				}
				break;
			case 3:
				{
				setState(51);
				iterationForEach();
				}
				break;
			case 4:
				{
				setState(52);
				show();
				}
				break;
			case 5:
				{
				setState(53);
				functionExecution();
				}
				break;
			}
			setState(56);
			match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AlgorithmExecutionContext extends ParserRuleContext {
		public List<TerminalNode> VariableName() { return getTokens(cubixParser.VariableName); }
		public TerminalNode VariableName(int i) {
			return getToken(cubixParser.VariableName, i);
		}
		public TerminalNode DOT() { return getToken(cubixParser.DOT, 0); }
		public TerminalNode EXEC() { return getToken(cubixParser.EXEC, 0); }
		public TerminalNode LeftRoundBracket() { return getToken(cubixParser.LeftRoundBracket, 0); }
		public TerminalNode RightRoundBracket() { return getToken(cubixParser.RightRoundBracket, 0); }
		public TerminalNode MOVEVALUE() { return getToken(cubixParser.MOVEVALUE, 0); }
		public TerminalNode COMMA() { return getToken(cubixParser.COMMA, 0); }
		public TerminalNode NUMBER() { return getToken(cubixParser.NUMBER, 0); }
		public AlgorithmExecutionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_algorithmExecution; }
	}

	public final AlgorithmExecutionContext algorithmExecution() throws RecognitionException {
		AlgorithmExecutionContext _localctx = new AlgorithmExecutionContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_algorithmExecution);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(58);
			match(VariableName);
			setState(59);
			match(DOT);
			setState(60);
			match(EXEC);
			setState(61);
			match(LeftRoundBracket);
			setState(62);
			_la = _input.LA(1);
			if ( !(_la==MOVEVALUE || _la==VariableName) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			setState(65);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==COMMA) {
				{
				setState(63);
				match(COMMA);
				setState(64);
				match(NUMBER);
				}
			}

			setState(67);
			match(RightRoundBracket);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ShowContext extends ParserRuleContext {
		public TerminalNode SHOW() { return getToken(cubixParser.SHOW, 0); }
		public TerminalNode LeftRoundBracket() { return getToken(cubixParser.LeftRoundBracket, 0); }
		public TerminalNode RightRoundBracket() { return getToken(cubixParser.RightRoundBracket, 0); }
		public TerminalNode VariableName() { return getToken(cubixParser.VariableName, 0); }
		public ShowContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_show; }
	}

	public final ShowContext show() throws RecognitionException {
		ShowContext _localctx = new ShowContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_show);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(69);
			match(SHOW);
			setState(70);
			match(LeftRoundBracket);
			{
			setState(71);
			match(VariableName);
			}
			setState(72);
			match(RightRoundBracket);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LoopContext extends ParserRuleContext {
		public IterationForIContext iterationForI() {
			return getRuleContext(IterationForIContext.class,0);
		}
		public IterationForEachContext iterationForEach() {
			return getRuleContext(IterationForEachContext.class,0);
		}
		public LoopContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_loop; }
	}

	public final LoopContext loop() throws RecognitionException {
		LoopContext _localctx = new LoopContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_loop);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(76);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
			case 1:
				{
				setState(74);
				iterationForI();
				}
				break;
			case 2:
				{
				setState(75);
				iterationForEach();
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class IterationForIContext extends ParserRuleContext {
		public TerminalNode LOOP() { return getToken(cubixParser.LOOP, 0); }
		public TerminalNode TIMES() { return getToken(cubixParser.TIMES, 0); }
		public TerminalNode LeftCurlyBracket() { return getToken(cubixParser.LeftCurlyBracket, 0); }
		public TerminalNode RightCurlyBracket() { return getToken(cubixParser.RightCurlyBracket, 0); }
		public TerminalNode NUMBER() { return getToken(cubixParser.NUMBER, 0); }
		public TerminalNode VariableName() { return getToken(cubixParser.VariableName, 0); }
		public List<AlgorithmExecutionContext> algorithmExecution() {
			return getRuleContexts(AlgorithmExecutionContext.class);
		}
		public AlgorithmExecutionContext algorithmExecution(int i) {
			return getRuleContext(AlgorithmExecutionContext.class,i);
		}
		public List<ShowContext> show() {
			return getRuleContexts(ShowContext.class);
		}
		public ShowContext show(int i) {
			return getRuleContext(ShowContext.class,i);
		}
		public List<LoopContext> loop() {
			return getRuleContexts(LoopContext.class);
		}
		public LoopContext loop(int i) {
			return getRuleContext(LoopContext.class,i);
		}
		public List<CubeInitializationContext> cubeInitialization() {
			return getRuleContexts(CubeInitializationContext.class);
		}
		public CubeInitializationContext cubeInitialization(int i) {
			return getRuleContext(CubeInitializationContext.class,i);
		}
		public List<AlgorithmInitalizationContext> algorithmInitalization() {
			return getRuleContexts(AlgorithmInitalizationContext.class);
		}
		public AlgorithmInitalizationContext algorithmInitalization(int i) {
			return getRuleContext(AlgorithmInitalizationContext.class,i);
		}
		public List<NumberInitalizationContext> numberInitalization() {
			return getRuleContexts(NumberInitalizationContext.class);
		}
		public NumberInitalizationContext numberInitalization(int i) {
			return getRuleContext(NumberInitalizationContext.class,i);
		}
		public List<SettingInitalizationContext> settingInitalization() {
			return getRuleContexts(SettingInitalizationContext.class);
		}
		public SettingInitalizationContext settingInitalization(int i) {
			return getRuleContext(SettingInitalizationContext.class,i);
		}
		public List<MoveInitalizationContext> moveInitalization() {
			return getRuleContexts(MoveInitalizationContext.class);
		}
		public MoveInitalizationContext moveInitalization(int i) {
			return getRuleContext(MoveInitalizationContext.class,i);
		}
		public List<ArrayInitalizationContext> arrayInitalization() {
			return getRuleContexts(ArrayInitalizationContext.class);
		}
		public ArrayInitalizationContext arrayInitalization(int i) {
			return getRuleContext(ArrayInitalizationContext.class,i);
		}
		public List<TerminalNode> PLUS() { return getTokens(cubixParser.PLUS); }
		public TerminalNode PLUS(int i) {
			return getToken(cubixParser.PLUS, i);
		}
		public IterationForIContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_iterationForI; }
	}

	public final IterationForIContext iterationForI() throws RecognitionException {
		IterationForIContext _localctx = new IterationForIContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_iterationForI);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(78);
			match(LOOP);
			setState(79);
			_la = _input.LA(1);
			if ( !(_la==VariableName || _la==NUMBER) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			setState(80);
			match(TIMES);
			setState(81);
			match(LeftCurlyBracket);
			setState(91);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case VariableName:
				{
				setState(82);
				algorithmExecution();
				}
				break;
			case SHOW:
				{
				setState(83);
				show();
				}
				break;
			case LOOP:
				{
				setState(84);
				loop();
				}
				break;
			case CUBE:
				{
				setState(85);
				cubeInitialization();
				}
				break;
			case ALGO:
				{
				setState(86);
				algorithmInitalization();
				}
				break;
			case NUM:
				{
				setState(87);
				numberInitalization();
				}
				break;
			case SETTING:
				{
				setState(88);
				settingInitalization();
				}
				break;
			case MOVE:
				{
				setState(89);
				moveInitalization();
				}
				break;
			case ARRAY:
				{
				setState(90);
				arrayInitalization();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			setState(107);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==PLUS) {
				{
				{
				setState(93);
				match(PLUS);
				setState(103);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case VariableName:
					{
					setState(94);
					algorithmExecution();
					}
					break;
				case SHOW:
					{
					setState(95);
					show();
					}
					break;
				case LOOP:
					{
					setState(96);
					loop();
					}
					break;
				case CUBE:
					{
					setState(97);
					cubeInitialization();
					}
					break;
				case ALGO:
					{
					setState(98);
					algorithmInitalization();
					}
					break;
				case NUM:
					{
					setState(99);
					numberInitalization();
					}
					break;
				case SETTING:
					{
					setState(100);
					settingInitalization();
					}
					break;
				case MOVE:
					{
					setState(101);
					moveInitalization();
					}
					break;
				case ARRAY:
					{
					setState(102);
					arrayInitalization();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				}
				setState(109);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(110);
			match(RightCurlyBracket);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class IterationForEachContext extends ParserRuleContext {
		public TerminalNode LOOP() { return getToken(cubixParser.LOOP, 0); }
		public TerminalNode IN() { return getToken(cubixParser.IN, 0); }
		public List<TerminalNode> VariableName() { return getTokens(cubixParser.VariableName); }
		public TerminalNode VariableName(int i) {
			return getToken(cubixParser.VariableName, i);
		}
		public TerminalNode USING() { return getToken(cubixParser.USING, 0); }
		public TerminalNode LeftCurlyBracket() { return getToken(cubixParser.LeftCurlyBracket, 0); }
		public TerminalNode RightCurlyBracket() { return getToken(cubixParser.RightCurlyBracket, 0); }
		public List<AlgorithmExecutionContext> algorithmExecution() {
			return getRuleContexts(AlgorithmExecutionContext.class);
		}
		public AlgorithmExecutionContext algorithmExecution(int i) {
			return getRuleContext(AlgorithmExecutionContext.class,i);
		}
		public List<ShowContext> show() {
			return getRuleContexts(ShowContext.class);
		}
		public ShowContext show(int i) {
			return getRuleContext(ShowContext.class,i);
		}
		public List<LoopContext> loop() {
			return getRuleContexts(LoopContext.class);
		}
		public LoopContext loop(int i) {
			return getRuleContext(LoopContext.class,i);
		}
		public List<CubeInitializationContext> cubeInitialization() {
			return getRuleContexts(CubeInitializationContext.class);
		}
		public CubeInitializationContext cubeInitialization(int i) {
			return getRuleContext(CubeInitializationContext.class,i);
		}
		public List<AlgorithmInitalizationContext> algorithmInitalization() {
			return getRuleContexts(AlgorithmInitalizationContext.class);
		}
		public AlgorithmInitalizationContext algorithmInitalization(int i) {
			return getRuleContext(AlgorithmInitalizationContext.class,i);
		}
		public List<NumberInitalizationContext> numberInitalization() {
			return getRuleContexts(NumberInitalizationContext.class);
		}
		public NumberInitalizationContext numberInitalization(int i) {
			return getRuleContext(NumberInitalizationContext.class,i);
		}
		public List<SettingInitalizationContext> settingInitalization() {
			return getRuleContexts(SettingInitalizationContext.class);
		}
		public SettingInitalizationContext settingInitalization(int i) {
			return getRuleContext(SettingInitalizationContext.class,i);
		}
		public List<MoveInitalizationContext> moveInitalization() {
			return getRuleContexts(MoveInitalizationContext.class);
		}
		public MoveInitalizationContext moveInitalization(int i) {
			return getRuleContext(MoveInitalizationContext.class,i);
		}
		public List<ArrayInitalizationContext> arrayInitalization() {
			return getRuleContexts(ArrayInitalizationContext.class);
		}
		public ArrayInitalizationContext arrayInitalization(int i) {
			return getRuleContext(ArrayInitalizationContext.class,i);
		}
		public List<TerminalNode> PLUS() { return getTokens(cubixParser.PLUS); }
		public TerminalNode PLUS(int i) {
			return getToken(cubixParser.PLUS, i);
		}
		public IterationForEachContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_iterationForEach; }
	}

	public final IterationForEachContext iterationForEach() throws RecognitionException {
		IterationForEachContext _localctx = new IterationForEachContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_iterationForEach);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(112);
			match(LOOP);
			setState(113);
			match(IN);
			setState(114);
			match(VariableName);
			setState(115);
			match(USING);
			setState(116);
			match(VariableName);
			setState(117);
			match(LeftCurlyBracket);
			setState(127);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case VariableName:
				{
				setState(118);
				algorithmExecution();
				}
				break;
			case SHOW:
				{
				setState(119);
				show();
				}
				break;
			case LOOP:
				{
				setState(120);
				loop();
				}
				break;
			case CUBE:
				{
				setState(121);
				cubeInitialization();
				}
				break;
			case ALGO:
				{
				setState(122);
				algorithmInitalization();
				}
				break;
			case NUM:
				{
				setState(123);
				numberInitalization();
				}
				break;
			case SETTING:
				{
				setState(124);
				settingInitalization();
				}
				break;
			case MOVE:
				{
				setState(125);
				moveInitalization();
				}
				break;
			case ARRAY:
				{
				setState(126);
				arrayInitalization();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			setState(143);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==PLUS) {
				{
				{
				setState(129);
				match(PLUS);
				setState(139);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case VariableName:
					{
					setState(130);
					algorithmExecution();
					}
					break;
				case SHOW:
					{
					setState(131);
					show();
					}
					break;
				case LOOP:
					{
					setState(132);
					loop();
					}
					break;
				case CUBE:
					{
					setState(133);
					cubeInitialization();
					}
					break;
				case ALGO:
					{
					setState(134);
					algorithmInitalization();
					}
					break;
				case NUM:
					{
					setState(135);
					numberInitalization();
					}
					break;
				case SETTING:
					{
					setState(136);
					settingInitalization();
					}
					break;
				case MOVE:
					{
					setState(137);
					moveInitalization();
					}
					break;
				case ARRAY:
					{
					setState(138);
					arrayInitalization();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				}
				setState(145);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(146);
			match(RightCurlyBracket);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FunctionExecutionContext extends ParserRuleContext {
		public List<TerminalNode> VariableName() { return getTokens(cubixParser.VariableName); }
		public TerminalNode VariableName(int i) {
			return getToken(cubixParser.VariableName, i);
		}
		public List<TerminalNode> COMMA() { return getTokens(cubixParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(cubixParser.COMMA, i);
		}
		public FunctionExecutionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_functionExecution; }
	}

	public final FunctionExecutionContext functionExecution() throws RecognitionException {
		FunctionExecutionContext _localctx = new FunctionExecutionContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_functionExecution);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(148);
			match(VariableName);
			setState(162);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,13,_ctx) ) {
			case 1:
				{
				{
				setState(149);
				match(T__0);
				setState(154);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,12,_ctx);
				while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
					if ( _alt==1 ) {
						{
						{
						setState(150);
						match(VariableName);
						setState(151);
						match(COMMA);
						}
						} 
					}
					setState(156);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,12,_ctx);
				}
				setState(157);
				match(VariableName);
				setState(158);
				match(T__1);
				}
				}
				break;
			case 2:
				{
				}
				break;
			case 3:
				{
				{
				setState(160);
				match(T__0);
				setState(161);
				match(T__1);
				}
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
